--- a/.github/workflows/fastgpt-build-image.yml
+++ b/.github/workflows/fastgpt-build-image.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Login to Ali Hub
         uses: docker/login-action@v3
         with:
-          registry: registry.cn-hangzhou.aliyuncs.com
+          registry: crpi-u16o47qf6y5a1bqg.cn-shenzhen.personal.cr.aliyuncs.com
           username: ${{ secrets.ALI_HUB_USERNAME }}
           password: ${{ secrets.ALI_HUB_PASSWORD }}
 
@@ -106,7 +106,7 @@ jobs:
       - name: Login to Ali Hub
         uses: docker/login-action@v3
         with:
-          registry: registry.cn-hangzhou.aliyuncs.com
+          registry: crpi-u16o47qf6y5a1bqg.cn-shenzhen.personal.cr.aliyuncs.com
           username: ${{ secrets.ALI_HUB_USERNAME }}
           password: ${{ secrets.ALI_HUB_PASSWORD }}
 
